k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-dashboard
  namespace: flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-dashboard
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: flask-dashboard
    spec:
      containers:
        - name: flask-dashboard
          image: baqirops/flask-eks-hpa:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 15
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
